<resources>
    <string name="app_name">USTC Convocation</string>
    <string name="no_internet_image">No Internet Image</string>
    <string name="waiting_for_connection">No Internet Connection. Waiting for connection…</string>
    <string name="error_image">Error Image</string>
    <string name="ah_snap_something_went_wrong">Ah, snap! Something went wrong.</string>
    <string name="retry">Retry</string>
    <string name="environment">Environment: %1$s</string>
    <string name="switch_environment">Switch</string>
</resources>