<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <WebView
        android:id="@+id/webView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <!-- Progress bar -->
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/noInternetLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone">

        <ImageView
            android:id="@+id/noInternetImage"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:contentDescription="@string/no_internet_image"
            android:src="@drawable/no_internet" />

        <TextView
            android:id="@+id/noInternetText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/noInternetImage"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/waiting_for_connection"
            android:textSize="16sp" />

        <!-- Waiting for internet connection -->
        <ProgressBar
            android:id="@+id/progressBarInternet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/noInternetText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:indeterminate="true"
            android:visibility="visible" />

        <!-- Button to retry -->
        <Button
            android:id="@+id/retryInternetButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/progressBarInternet"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/retry" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/errorLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone">

        <ImageView
            android:id="@+id/errorImage"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:contentDescription="@string/error_image"
            android:src="@drawable/error" />

        <TextView
            android:id="@+id/errorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/errorImage"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/ah_snap_something_went_wrong"
            android:textAlignment="center"
            android:textSize="16sp" />

        <Button
            android:id="@+id/retryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/errorText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/retry"
            android:textSize="16sp" />

    </RelativeLayout>

    <!-- Switch Environment -->
    <RelativeLayout
        android:id="@+id/switchEnvironmentLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:background="@color/black"
        android:alpha="0.5"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:visibility="visible">

        <TextView
            android:id="@+id/switchEnvironmentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textColor="@color/white"
            android:text="@string/environment"
            android:textSize="16sp" />

        <Button
            android:id="@+id/switchEnvironmentButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/switch_environment"
            android:textSize="16sp"
            tools:ignore="RelativeOverlap" />
    </RelativeLayout>

</RelativeLayout>